--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@ under the License.
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.kpn</groupId>
-    <artifactId>flink.test</artifactId>
+    <artifactId>flink.stream</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
@@ -69,6 +69,11 @@ under the License.
             <artifactId>flink-connector-kafka</artifactId>
             <version>0.10.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-connector-filesystem</artifactId>
+            <version>0.10.1</version>
+        </dependency>
     </dependencies>
 
     <!-- We use the maven-assembly plugin to create a fat jar that contains all dependencies
@@ -77,6 +82,98 @@ under the License.
     <build>
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <version>2.9</version>
+                <executions>
+                    <execution>
+                        <id>unpack</id>
+                        <!-- executed just before the package phase -->
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>unpack</goal>
+                        </goals>
+                        <configuration>
+                            <artifactItems>
+                                <!-- For Kafka client connector classes -->
+                                <artifactItem>
+                                    <groupId>org.apache.kafka</groupId>
+                                    <artifactId>kafka-clients</artifactId>
+                                    <version>0.8.2.0</version>
+                                    <type>jar</type>
+                                    <overWrite>false</overWrite>
+                                    <outputDirectory>${project.build.directory}/classes</outputDirectory>
+                                    <includes>org/apache/kafka/**</includes>
+                                </artifactItem>
+                                <!-- For Flink connector classes -->
+                                <artifactItem>
+                                    <groupId>org.apache.flink</groupId>
+                                    <artifactId>flink-connector-kafka</artifactId>
+                                    <version>0.10.1</version>
+                                    <type>jar</type>
+                                    <overWrite>false</overWrite>
+                                    <outputDirectory>${project.build.directory}/classes</outputDirectory>
+                                    <includes>org/apache/flink/**</includes>
+                                </artifactItem>
+                                <!-- For Kafka API classes -->
+                                <artifactItem>
+                                    <groupId>org.apache.kafka</groupId>
+                                    <artifactId>kafka_2.10</artifactId>
+                                    <version>0.8.2.0</version>
+                                    <type>jar</type>
+                                    <overWrite>false</overWrite>
+                                    <outputDirectory>${project.build.directory}/classes</outputDirectory>
+                                    <includes>kafka/**</includes>
+                                </artifactItem>
+                                <!-- For flink connector classes -->
+                                <artifactItem>
+                                    <groupId>org.apache.flink</groupId>
+                                    <artifactId>flink-connector-filesystem</artifactId>
+                                    <version>0.10.1</version>
+                                    <type>jar</type>
+                                    <overWrite>false</overWrite>
+                                    <outputDirectory>${project.build.directory}/classes</outputDirectory>
+                                    <includes>org/apache/flink/**</includes>
+                                </artifactItem>
+                                <!-- For flink connector classes -->
+                                <artifactItem>
+                                    <groupId>com.yammer.metrics</groupId>
+                                    <artifactId>metrics-core</artifactId>
+                                    <version>2.2.0</version>
+                                    <type>jar</type>
+                                    <overWrite>false</overWrite>
+                                    <outputDirectory>${project.build.directory}/classes</outputDirectory>
+                                    <includes>com/yammer/metrics/**</includes>
+                                </artifactItem>
+                                <!-- For flink connector classes -->
+                                <artifactItem>
+                                    <groupId>com.101tec</groupId>
+                                    <artifactId>zkclient</artifactId>
+                                    <version>0.7</version>
+                                    <type>jar</type>
+                                    <overWrite>false</overWrite>
+                                    <outputDirectory>${project.build.directory}/classes</outputDirectory>
+                                    <includes>org/**</includes>
+                                </artifactItem>
+                            </artifactItems>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                            <mainClass>com.kpn.datalab.Job</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
+            <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <version>2.4.1</version>
                 <configuration>
@@ -84,9 +181,9 @@ under the License.
                         <descriptor>src/assembly/flink-fat-jar.xml</descriptor>
                     </descriptors>
                     <archive>
-                        <manifestEntries>
-                            <Program-Class>com.kpn.datalab.Job</Program-Class>
-                        </manifestEntries>
+                        <manifest>
+                            <mainClass>com.kpn.datalab.Job</mainClass>
+                        </manifest>
                     </archive>
                 </configuration>
                 <executions>
